# NanoJPEG

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
Code/: CMakeLists.txt  Vc  app.cpp  converter.hpp  idct_avx.cpp  idct_avx.hpp  mio.hpp  nanojpeg.hpp
benchmark/: app.cpp
